 _____________________________________________________________________________
 
   Version 0.17.1.4
 _____________________________________________________________________________

 - Bug fix: Better filtering of invalid factions and pawn kinds to avoid
   errors when adding a character from a different faction.
 - Bug fix: The randomize options now take into account a character's faction.

 _____________________________________________________________________________
 
   Version 0.17.1.3
 _____________________________________________________________________________

 - Bug fix: Presets that include Alpha 16-saved characters that have had
   relationships added will now save and load properly.
 - Mod compatibility fixes.
 _____________________________________________________________________________
 
   Version 0.17.1.2
 _____________________________________________________________________________

 - Bug fix: No longer adding random health conditions when loading a
   character.
 - Bug fix: Now correctly clearing out health conditions when randomizing a
   character.
 _____________________________________________________________________________
 
   Version 0.17.1.1
 _____________________________________________________________________________

 - Added support for Alpha 17
 - New tabbed interface.  The character list moves from being a list of tabs
   across the top to being a scrolling list on the left.  The tabs across
   the top are now used to navigate between the mod pages.
 - Re-arranged interface for the character customization page.
 - New relationships page with a new interface for creating parent/child and
   other relationships in a more predictable way.
 - Added support for a fourth trait.
 - Added support for more than 10 colonists.
 - You can now directly type values into numeric fields for age and equipment
   counts.
 - Reworked how the mod integrates with scenarios and map generation (it no